--- a/Aircel/Aircel.html
+++ b/Aircel/Aircel.html
@@ -100,6 +100,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Aircel78.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aircel79.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aircel80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aircel81.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -147,6 +148,7 @@ Titles
 <li><a href="Aircel41.jpg">Galaxina</a> (1991)
 <li><a href="Aircel42.jpg">Gauntlet</a> (1992)
 <li><a href="Aircel43.jpg">Greenlock</a> (1991)
+<li><a href="Aircel81.jpg">Gun Fury</a> (1989)
 <li><a href="Aircel44.jpg">Hardball</a> (1991)
 <li><a href="Aircel45.jpg">Hardkorr</a> (1991)
 <li><a href="Aircel46.jpg">Hooters</a> (1992)
