--- a/TopShelf/TopShelf.html
+++ b/TopShelf/TopShelf.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="TopShelf.jpg">
+<img src="TopShelf1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -28,179 +28,166 @@
 <div class="mySlides" style="text-align: center;"><img src="TopShelf8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TopShelf9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TopShelf10.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="TopShelf11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Top Shelf Productions is an American publishing company founded in 1997, originally owned and operated by Chris Staros and Brett Warnock and a small staff. Now an imprint of IDW Publishing, Top Shelf is based in Marietta, Georgia.
-</p><p>
-Top Shelf publishes comics and graphic novels by authors such as Alan Moore, Craig Thompson, James Kochalka, Andy Runton, Jeffrey Brown, Nate Powell, Eddie Campbell, Alex Robinson, Jeff Lemire, and Matt Kindt.
+Top Shelf Productions is an American publishing company founded in 1997, originally owned and operated by Chris Staros and Brett Warnock and a small staff. Now an imprint of IDW Publishing, Top Shelf is based in Marietta, Georgia. They publish comics and graphic novels by authors such as Alan Moore, Craig Thompson, James Kochalka, Andy Runton, Jeffrey Brown, Nate Powell, Eddie Campbell, Alex Robinson, Jeff Lemire, and Matt Kindt.
 </p><p>
 The company was founded by Chris Staros and Brett Warnock after discussions between the pair at the 1997 Small Press Expo. Previously Warnock had used the Top Shelf name as the title for a self-published anthology, whilst Staros had worked in the industry representing Eddie Campbell in the United States and self-published a number of comics-based zines. The partnership evolved from combining Warnock's design skills and marketing abilities with Staros' talents for editing and book-keeping. The duo started publishing under the name Primal Groove Press, but soon changed the name to Top Shelf.
 </p><p>
 Titles
 </p><p>
-Titles by Pete Sickman-Garner are:
-<ul>
-<li>Hey Mister- Afterschool special
-<li>    Hey Mister- Celebrity Roast
-<li>    Hey Mister- The Fall Collection
-</ul>
-Titles by Alan Moore include:
-<ul>
-<li>    Lost Girls (2006)
-<li>    From Hell (1999)
-<li>    Voice of the Fire (1996)
-<li>    The Mirror of Love 
-<li>    The League of Extraordinary Gentlemen, Volume III: Century (2009)
-<li>    The Moon and Serpent Bumper Book of Magic
-</ul>
-Titles by Craig Thompson include:
-<ul>
-<li>    Blankets
-<li>    Good-bye, Chunky Rice
-<li>    Carnet de Voyage
-</ul>
-Titles by Andy Runton include:
-<ul>
-<li>    Owly
-<li>        The Way Home
-<li>        Just A Little Blue
-<li>        Flying Lessons
-<li>        A Time To Be Brave
-</ul>
-Titles by Jeffrey Brown include:
-<ul>
-<li>    Clumsy
-<li>    Unlikely
-<li>    Aeiou
-<li>    Every Girl Is The End Of The World For Me
-<li>    I Am Going To Be Small
-<li>    Be a Man
-<li>    Minisulk
-<li>    Bighead
-<li>    Feeble Attempts
-<li>    Incredible Change-Bots
-</ul>
-Titles by James Kochalka include:
-<ul>
-<li>    SuperF*ckers
-<li>    Monkey vs. Robot
-<li>    American Elf
-<li>    Pinky & Stinky
-<li>    Conversation
-<li>    Magic Boy and the Robot Elf
-<li>    The Perfect Planet
-</ul>
-Titles by Alex Robinson include:
-<ul>
-<li>    Tricked
-<li>    Box Office Poison
-<li>    Bop! - More Box Office Poison
-<li>    Too Cool To Be Forgotten
-<li>    Alex Robinson's Lower Regions
-</ul>
-Titles by Nate Powell include:
-<ul>
-<li>    Please Release
-<li>    Swallow Me Whole
-<li>    Any Empire
-</ul>
-Titles by Renée French include:
-<ul>
-<li>    The Ticking
-<li>    The Soap Lady
-<li>    Micrographica
-</ul>
-Titles by Jason Hall include:
-<ul>
-<li>        Pistolwhip
-<li>        The Yellow Menace
-<li>        Mephisto & The Empty Box
-</ul>
-Titles by Matt Kindt include:
-<ul>
-<li>    2 Sisters
-<li>        Pistolwhip
-<li>        The Yellow Menace
-<li>        Mephisto & The Empty Box
-<li>    Super Spy
-</ul>
-Titles by Jeff Lemire include:
-<ul>
-    Essex County Trilogy:
-<li>        Tales From The Farm (Top Shelf Productions, 2008)
-<li>        Ghost Stories (Top Shelf Productions, 2008)
-<li>        The Country Nurse (Top Shelf Productions, 2009)
-<li>        The Collected Essex County (Top Shelf Productions, 2009)
-<li>    The Underwater Welder
-</ul>
-Titles by Nicolas Mahler include:
-<ul>
-<li>    Lone Racer
-<li>    Van Helsing's Night Off
-</ul>
-Titles by Tom Hart include:
-<ul>
-<li>    Hutch Owen: The Collected
-<li>    Hutch Owen: Unmarketable
-</ul>
-Titles by Rich Koslowski include:
-<ul>
-<li>    The King
-<li>    Three Fingers
-</ul>
-Titles by Tony Consiglio include:
-<ul>
-<li>    110 Per¢
-<li>    Doublecross
-</ul>
-Titles by Dan James include:
-<ul>
-<li>    Mosquito
-<li>    The Octopi & The Ocean
-</ul>
-Titles by Max Estes include:
-<ul>
-<li>    Coffee & Donuts
-<li>    Hello, Again
-</ul>
-Titles by David Yurkovich include:
-<ul>
-<li>    Less Than Heroes
-<li>    Death By Chocolate: Redux
-</ul>
-Other titles by various authors include:
-<ul>
-<li>    AX: alternative manga edited by Sean Michael Wilson
-<li>    Barefoot Serpent by Scott Morse
-<li>    Cigarette Girl by Masahiko Matsumoto
-<li>    Comic Book Artist magazine edited by Jon B. Cooke
-<li>    A Complete Lowlife by Ed Brubaker
-<li>    Creature Tech by Doug TenNapel
-<li>    Cry Yourself To Sleep by Jeremy Tinder
-<li>    Dang! by Martin Cendreda
-<li>    Discovered by Savannah College of Art and Design’s Sequential Art Program
-<li>    Grampa & Julie: Shark Hunters by Jef Czekaj
-<li>    Keyhole by Dean Haspiel and Josh Neufeld
-<li>    Korgi by Christian Slade
-<li>    March: Book One by John Lewis and Andrew Aydin, illustrated by Nate Powell
-<li>   Moving Pictures by Kathryn and Stuart Immonen
-<li>   Regards From Serbia by Aleksandar Zograf
-<li>    Same Difference & Other Stories by Derek Kirk Kim
-<li>    Second Thoughts by Niklas Asker
-<li>    Speechless by Peter Kuper
-<li>    Spiral-Bound by Aaron Renier
-<li>    Strong Female Protagonist by Brennan Lee Mulligan and Molly Ostertag
-<li>    The Surrogates by Robert Venditti and Brett Weldele
-<li>    Tales From The Farm by Jeff Lemire
-<li>    Tales Of Woodsman Pete by Lilli Carre
-<li>    That Salty Air by Tim Sievert
-<li>    Will You Still Love Me If I Wet The Bed? by Liz Prince
-<li>    World War 3 Illustrated by various
-</ul>
+<li><a href="TopShelf1.jpg">110 Per¢</a> (2006)
+<li><a href="TopShelf2.jpg">The 120 Days of Simon</a> (2012)
+<li><a href="TopShelf3.jpg">24 x 2</a> (2008)
+<li><a href="TopShelf4.jpg">Abe: Wrong for All the Right Reasons</a> (2001)
+<li><a href="TopShelf5.jpg">An Advance Look at March: Book One</a> 	(2013)
+<li><a href="TopShelf6.jpg">Alec: The Years Have Pants</a>  	(2009)
+<li><a href="TopShelf7.jpg">Alex Robinson's Lower Regions</a> 	(2007)
+<li><a href="TopShelf8.jpg">All Flee!</a>  	(2004)
+<li><a href="TopShelf9.jpg">Alone Forever</a>  	(2014)
+<li><a href="TopShelf10.jpg">American Elf: The Collected Sketchbook Diaries of James Kolchalka</a> (2004)
+<li><a href="TopShelf11.jpg">Any Easy Intimacy</a> 	2007
+<li><a href="TopShelf12.jpg">Any Empire</a>  	2011
+<li><a href="TopShelf13.jpg">AX alternative manga</a> 	2010
+<li><a href="TopShelf14.jpg">Baja</a>  	2002
+<li><a href="TopShelf15.jpg">The Barefoot Serpent</a> 	2003
+<li><a href="TopShelf16.jpg">BB Wolf and the Three LPs</a>  	2010
+<li><a href="TopShelf17.jpg">Big Clay Pot</a>  	2000
+<li><a href="TopShelf18.jpg">Bighead</a> 	2004
+<li><a href="TopShelf19.jpg">Blankets</a> 	2003
+<li><a href="TopShelf20.jpg">Bop!</a> 	(2003)
+Box Office Poison  	2002 	1 issues (0 indexed) 	Gallery 	October 2002
+Boy in My Pocket: The Billy Dogma Experience  	2000 	1 issues (1 indexed) 	Gallery 	2000
+Broken Fender  	2002 	2 issues (1 indexed) 	Have 1 (Need 1) 	2002 - 1998
+Bughouse 	2000 	1 issues (1 indexed) 	Gallery 	2000
+Carnet de Voyage  	2004 	1 issues (1 indexed) 	Gallery 	July 2004
+Chester 5000 XYV  	2011 	1 issues (0 indexed) 	Gallery 	May 2011
+Cigarette Girl  	2016 	1 issues (0 indexed) 	Add 	2016
+Clock!  	1998 	1 issues (1 indexed) 	Gallery 	1998
+Clumsy  	2003 	1 issues (0 indexed) 	Add 	2003
+Comic Book Artist 	2003 	0 issues (0 indexed) 	No Covers 	2003
+Conversation  	2004 	2 issues (2 indexed) 	Gallery 	July 2004 - October 2005
+Crater XV  	2013 	1 issues (1 indexed) 	Have 1 (Need 1) 	2013
+Creature Tech  	2002 	1 issues (0 indexed) 	Add 	2002
+Crust 	1997 	1 issues (1 indexed) 	Add 	[July 1997]
+Dang! Brand Comics and Stories  	2004 	1 issues (1 indexed) 	Gallery 	Spring-Summer 2004
+Daydream Lullabies: A Billy Dogma Experience 	1999 	1 issues (1 indexed) 	Gallery 	May 1999
+Death by Chocolate: Redux  	2007 	1 issues (0 indexed) 	Gallery 	2007
+Delayed Replays 	2008 	1 issues (1 indexed) 	Gallery 	May 2008
+Doublecross: More Or Less  	2002 	1 issues (1 indexed) 	Gallery 	2002
+Dragon Puncher 	2011 	1 issues (0 indexed) 	Gallery 	2011
+Dragon Puncher Island  	2011 	1 issues (0 indexed) 	Have 1 (Need 1) 	2011
+Essex County 	2007 	3 issues (2 indexed) 	Have 2 (Need 3) 	March 2007 - 2008
+Essex County 	2010 	1 issues (1 indexed) 	Add 	November 2010
+Far Arden  	2009 	1 issues (1 indexed) 	Gallery 	May 2009
+Feeble Attempts  	2007 	1 issues (0 indexed) 	Gallery 	2007
+Fox Bunny Funny 	2007 	1 issues (1 indexed) 	Gallery 	June 2007
+From Hell  	2004 	1 issues (1 indexed) 	Gallery 	April 2004
+Gingerbread Girl  	2011 	1 issues (0 indexed) 	Add 	[June] 2011
+Good-Bye, Chunky Rice  	1999 	1 issues (1 indexed) 	Gallery 	October 1999
+Happy  	2001 	4 issues (4 indexed) 	Gallery 	2001 - 2004
+Harvey Pekar's Cleveland  	2012 	1 issues (0 indexed) 	Have 1 (Need 1) 	2012
+Heck  	2013 	1 issues (1 indexed) 	Gallery 	July 2013
+Hey Mister  	1997 	8 issues (0 indexed) 	Have 2 (Need 6) 	1997 - 2001
+Hey Princess 	2010 	1 issues (0 indexed) 	Gallery 	2010
+Hey, Mister: Celebrity Roast 	1999 	1 issues (1 indexed) 	Gallery 	1999
+Hieronymus B. 1997-2007  	2007 	1 issues (0 indexed) 	Add 	2007
+Hunter S. Thompson's Fear and Loathing in Las Vegas  	2015 	1 issues (0 indexed) 	Add 	[November] 2015
+Hutch Owen: Unmarketable!  	2004 	1 issues (1 indexed) 	Add 	November 2004
+Infinite Kung Fu  	2011 	1 issues (0 indexed) 	Add 	[September] 2011
+Jennifer Daydreamer: Anna & Eva 	2004 	1 issues (0 indexed) 	Gallery 	2004
+Jennifer Daydreamer: Oliver  	2003 	1 issues (0 indexed) 	Gallery 	2003
+Johnny Boo & Harold in Tricky Treaters  	2012 	1 issues (1 indexed) 	Gallery 	2012
+Johnny Boo and the Happy Apples  	2009 	1 issues (0 indexed) 	Gallery 	2009
+Johnny Boo and the Ice Cream Computer  	2018 	1 issues (1 indexed) 	Add 	2018
+Johnny Boo and the Mean Little Boy  	2010 	1 issues (0 indexed) 	Gallery 	June 2010
+Johnny Boo and the Midnight Monsters  	2019 	1 issues (0 indexed) 	Add 	2019
+Johnny Boo and the Spooky Tree  	2018 	1 issues (1 indexed) 	Gallery 	2018
+Johnny Boo Does Something 	2013 	1 issues (0 indexed) 	Gallery 	March 2013
+Johnny Boo Is King!  	2019 	1 issues (0 indexed) 	Add 	2019
+Johnny Boo: The Best Little Ghost in the World  	2008 	1 issues (1 indexed) 	Gallery 	June 2008
+Johnny Boo: Twinkle Power  	2008 	1 issues (0 indexed) 	Gallery 	December 2008
+Keyhole  	1998 	2 issues (2 indexed) 	Gallery 	June 1998 - December 1998
+The Legend of Wild Man Fischer  	2004 	1 issues (1 indexed) 	Have 1 (Need 1) 	Fall 2004
+Less Than Heroes 	2004 	1 issues (0 indexed) 	Gallery 	2004
+Liar's Kiss  	2011 	1 issues (1 indexed) 	Add 	April 2011
+Life Begins at Incorporation: Cartoons and Essays by Matt Bors  	2013 	1 issues (0 indexed) 	Add 	2013
+Lone Racer  	2006 	1 issues (0 indexed) 	Gallery 	December 2006
+Lost Dogs  	2012 	1 issues (1 indexed) 	Have 1 (Need 1) 	2012
+Lost Girls  	2006 	3 issues (3 indexed) 	Gallery 	August 2006 - August 2006
+Love Addict  	2016 	1 issues (1 indexed) 	Gallery 	2016
+Lucille 	2011 	1 issues (0 indexed) 	Add 	April 2011
+Maddy Kettle  	2014 	1 issues (0 indexed) 	Add 	June 2014 ?
+The Man Who Loved Breasts  	2008 	1 issues (1 indexed) 	Gallery 	2008
+March  	2013 	3 issues (0 indexed) 	Add 	August 2013 - 2016
+March  	2013 	3 issues (3 indexed) 	Gallery 	August 2013 - 2016
+March [Oversized Deluxe Edition]  	2016 	1 issues (0 indexed) 	Add 	[February] 2016
+The Masterplan 	2003 	1 issues (0 indexed) 	Gallery 	2003
+A Matter of Life [a] 	2013 	1 issues (0 indexed) 	Gallery 	2013
+Micrographica 	2007 	1 issues (0 indexed) 	Gallery 	2007
+Monkey vs. Robot 	2000 	1 issues (1 indexed) 	Gallery 	[July] 2000
+Monkey vs. Robot and the Crystal of Power 	2003 	1 issues (1 indexed) 	Gallery 	2003
+Monster on the Hill  	2014 	1 issues (1 indexed) 	Gallery 	July 2013
+Mosquito  	2005 	1 issues (0 indexed) 	Gallery 	April 2005
+Moving Pictures  	2010 	1 issues (1 indexed) 	Gallery 	April 2010
+Night Animals 	2011 	1 issues (0 indexed) 	Gallery 	2011
+The Octopi and the Ocean  	2004 	1 issues (0 indexed) 	Gallery 	2004
+Owly  	2004 	5 issues (1 indexed) 	Have 6 (Need 1) 	September 2004 - August 2008
+Owly & Friends  	2008 	1 issues (1 indexed) 	Gallery 	April 2008
+Owly & Friends  	2009 	1 issues (1 indexed) 	Gallery 	April 2009
+Owly & Friends  	2010 	1 issues (1 indexed) 	Gallery 	April 2010
+Owly: Breakin' the Ice  	2006 	1 issues (0 indexed) 	Gallery 	May 2006
+Owly: Helping Hands  	2007 	1 issues (1 indexed) 	Gallery 	May 2007
+Owly: Splashin' Around  	2005 	1 issues (1 indexed) 	Gallery 	May 2005
+Please Release  	2006 	1 issues (0 indexed) 	Add 	2006
+Regards from Serbia 	2007 	1 issues (1 indexed) 	Gallery 	January 2007
+Same Difference and Other Stories 	2003 	1 issues (1 indexed) 	Have 2 (Need 1) 	May 2003
+Second Thoughts  	2009 	1 issues (1 indexed) 	Gallery 	April 2009
+The Sketchbook Diaries  	2001 	4 issues (0 indexed) 	Gallery 	2001 - ?
+Speechless  	2001 	1 issues (1 indexed) 	No Covers 	2001
+The Story of My Tits 	2015 	1 issues (0 indexed) 	Add 	2015
+Stuff About Sex... For Guys Who Are Not Like, Total Idiots  	2013 	1 issues (0 indexed) 	Gallery 	2013
+Super Spy  	2007 	1 issues (1 indexed) 	Gallery 	2007
+Super Spy: Lost Dossiers  	2010 	1 issues (1 indexed) 	Gallery 	March 2010
+Superf*ckers  	2005 	4 issues (4 indexed) 	Have 2 (Need 3) 	March 2005 - 2007
+Superf*ckers 	2010 	1 issues (1 indexed) 	Have 1 (Need 1) 	March 2010
+The Surrogates 	2005 	5 issues (0 indexed) 	Gallery 	2005 - 2006
+Swallow Me Whole  	2008 	1 issues (0 indexed) 	Add 	2008
+Tales of the Great Unspoken  	1999 	1 issues (1 indexed) 	Gallery 	January 1999
+Tales of Woodsman Pete  	2006 	1 issues (0 indexed) 	Add 	2006
+That Salty Air  	2008 	1 issues (0 indexed) 	Gallery 	April 2008
+Three Fingers  	2002 	1 issues (1 indexed) 	Gallery 	2002
+The Ticking  	2006 	1 issues (1 indexed) 	Add 	2006
+Tonoharu 	2014 	1 issues (0 indexed) 	Add 	2014
+Too Cool to Be Forgotten  	2008 	1 issues (0 indexed) 	Gallery 	[July] 2008
+Top Shelf 	1997 	5 issues (0 indexed) 	Have 1 (Need 4) 	1997 - 2003
+Top Shelf Kids Club  	2011 	4 issues (4 indexed) 	Gallery 	May 2011 - May 2014
+Top Shelf Seasonal Sampler  	2007 	1 issues (1 indexed) 	Gallery 	[Spring] 2007
+Top Shelf Seasonal Sampler 2008 	2008 	1 issues (0 indexed) 	Gallery 	Spring 2008
+Tricked 	2005 	1 issues (1 indexed) 	Gallery 	2005
+The Underwater Welder  	2012 	1 issues (1 indexed) 	Gallery 	August 2012
+Underwire  	2011 	1 issues (0 indexed) 	Gallery 	[May] 2011
+Unlikely  	2003 	1 issues (0 indexed) 	Gallery 	2003
+Upside Down  	2012 	1 issues (1 indexed) 	Gallery 	October 2012
+Van Helsing's Night off 	2004 	1 issues (0 indexed) 	Add 	2004
+We Can Fix It!  	2013 	1 issues (1 indexed) 	Gallery 	May 2013
+Wizzywig  	2012 	1 issues (0 indexed) 	Add 	July 2012
+Yearbook Stories: 1976-1978  	2007 	1 issues (1 indexed) 	Gallery 	October 2007
+You Don't Say  	2015 	1 issues (0 indexed) 	Add 	2015
+
 </p>
 
 </body>
