--- a/index.html
+++ b/index.html
@@ -15033,6 +15033,13 @@
 </tr>
 
 <tr>
+<td>Bulletproof</td>
+<td>1995</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bulletproof Coffin</td>
 <td>2010</td>
 <td>Image</td>
@@ -22683,6 +22690,13 @@
 <td>1943</td>
 <td>Creator</td>
 <td><a href="DaveCockrum/DaveCockrum.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dave Cooper</td>
+<td>1967</td>
+<td>Creator</td>
+<td><a href="DaveCooper/DaveCooper.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36051,6 +36065,13 @@
 </tr>
 
 <tr>
+<td>Green Skull</td>
+<td>1995</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Green Valley</td>
 <td>2016</td>
 <td>Image</td>
@@ -44519,6 +44540,13 @@
 </tr>
 
 <tr>
+<td>Kim Deitch</td>
+<td>1944</td>
+<td>Creator</td>
+<td><a href="KimDeitch/KimDeitch.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kim Possible</td>
 <td>2019</td>
 <td>IDW</td>
@@ -45216,6 +45244,13 @@
 <td>1941</td>
 <td>Amalgamated</td>
 <td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Known Associates</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53321,6 +53356,13 @@
 </tr>
 
 <tr>
+<td>Murder By Crowquill</td>
+<td>1999</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Murder Can Be Fun</td>
 <td>1996</td>
 <td>Slave Labor</td>
@@ -56683,6 +56725,13 @@
 <td>2004</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Oracle - A Trespassers Mystery</td>
+<td>1998</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63482,6 +63531,13 @@
 <td>2005</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Runaway - A Known Associates Mystery</td>
+<td>1995</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73537,6 +73593,13 @@
 </tr>
 
 <tr>
+<td>Trespassers</td>
+<td>1996</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tribute: Michael Jackson</td>
 <td>2009</td>
 <td>Tidalwave</td>
@@ -78700,6 +78763,13 @@
 <td>2014</td>
 <td>Vertigo</td>
 <td><a href="WolfMoon/WolfMoon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wolf Run - A Known Associates Mystery</td>
+<td>1995</td>
+<td>Known Associates</td>
+<td><a href="KnownAssociates/KnownAssociates.html">Details</a></td>
 </tr>
 
 <tr>
