--- a/Scribbly/Scribbly.html
+++ b/Scribbly/Scribbly.html
@@ -2,18 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Scribbly </title>
 </head>
 
 <body>
-<img src="Scribbly.jpg"> <br>
-Series: 15 issues 1948<br>
-Publisher: DC<br>
-<p>
-Sheldon Mayer moved "Scribbly" to All-American Publications in 1939. Soon afterward, the featured included the supporting character of "Ma" Hunkel, who would go on to become the Golden Age incarnation of the Red Tornado, with Mayer writing, penciling and inking the renamed Scribbly and the Red Tornado for All-American Comics between 1941 and 1944 when All-American merged with National.
+<img src="Scribbly1.jpg"><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Scribbly1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Scribbly15.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Scribbly ran on his own label for 15 issues starting in 1948.
+Created by <a href="../SheldonMayer/SheldonMayer.html">Sheldon Mayer</a>, he moved "Scribbly" to All-American Publications in 1939. Soon afterward, the featured included the supporting character of "Ma" Hunkel, who would go on to become the Golden Age incarnation of the Red Tornado, with Mayer writing, penciling and inking the renamed Scribbly and the Red Tornado for All-American Comics between 1941 and 1944 when All-American merged with National.
+</p><p>
+Scribbly ran on his own label for 15 issues starting in 1948 published by DC.
 </p><p>
 Scribbly was also a Dutch comic strip, created by Jan-Paul Arends. It ran daily in the Dutch edition of the Metro free newspaper from 1999 to 2010. Seven albums have been published containing the daily strips. The comic is known for its weird cast, and its tendency for parodying well-known films, books and famous people.
 </p>
