--- a/TopShelf/TopShelf.html
+++ b/TopShelf/TopShelf.html
@@ -38,6 +38,7 @@
 <div class="mySlides" style="text-align: center;"><img src="TopShelf18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TopShelf19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TopShelf20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TopShelf21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -69,11 +70,11 @@ Titles
 <li><a href="TopShelf18.jpg">Bighead</a> 	2004
 <li><a href="TopShelf19.jpg">Blankets</a> 	2003
 <li><a href="TopShelf20.jpg">Bop!</a> 	(2003)
-Box Office Poison  	2002 	1 issues (0 indexed) 	Gallery 	October 2002
-Boy in My Pocket: The Billy Dogma Experience  	2000 	1 issues (1 indexed) 	Gallery 	2000
-Broken Fender  	2002 	2 issues (1 indexed) 	Have 1 (Need 1) 	2002 - 1998
-Bughouse 	2000 	1 issues (1 indexed) 	Gallery 	2000
-Carnet de Voyage  	2004 	1 issues (1 indexed) 	Gallery 	July 2004
+<li><a href="TopShelf21.jpg">Box Office Poison</a> (2002)
+<li><a href="TopShelf22.jpg">Boy in My Pocket: The Billy Dogma Experience</a> (2000)
+<li><a href="TopShelf23.jpg">Broken Fender</a> (2002)
+<li><a href="TopShelf24.jpg">Bughouse</a> (2000)
+<li><a href="TopShelf25.jpg">Carnet de Voyage</a> (2004)
 Chester 5000 XYV  	2011 	1 issues (0 indexed) 	Gallery 	May 2011
 Cigarette Girl  	2016 	1 issues (0 indexed) 	Add 	2016
 Clock!  	1998 	1 issues (1 indexed) 	Gallery 	1998
