--- a/index.html
+++ b/index.html
@@ -33174,6 +33174,13 @@
 </tr>
 
 <tr>
+<td>Funny Stuff</td>
+<td>1944</td>
+<td>DC</td>
+<td><a href="FunnyStuff/FunnyStuff.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Funny Tunes</td>
 <td>1953</td>
 <td>Avon</td>
@@ -64505,6 +64512,13 @@
 </tr>
 
 <tr>
+<td>Scribbly</td>
+<td>1948</td>
+<td>DC</td>
+<td><a href="Scribbly/Scribbly.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Schizo</td>
 <td>1995</td>
 <td>Fantagraphics</td>
@@ -65944,6 +65958,13 @@
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sheldon Mayer</td>
+<td>1919</td>
+<td>Creator</td>
+<td><a href="SheldonMayer/SheldonMayer.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70362,6 +70383,13 @@
 </tr>
 
 <tr>
+<td>Sugar And Spike</td>
+<td>1956</td>
+<td>DC</td>
+<td><a href="SugarAndSpike/SugarAndSpike.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Suicide Forest</td>
 <td>2010</td>
 <td>IDW</td>
@@ -73162,7 +73190,7 @@
 </tr>
 
 <tr>
-<td>Top Shelf</td>
+<td>Top Shelf Productions</td>
 <td>1997</td>
 <td>Publisher</td>
 <td><a href="TopShelf/TopShelf.html">Details</a></td>
