--- a/slideshow.html
+++ b/slideshow.html
@@ -19,6 +19,39 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics/Fantagraphics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw/Raw14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1stFolio/1stFolio.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights3.jpg"></div>
