--- a/Raw/Raw.html
+++ b/Raw/Raw.html
@@ -32,6 +32,8 @@ Publisher: Raw Books<br>
 <div class="mySlides" style="text-align: center;"><img src="Raw10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Raw11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Raw12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Raw14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
