--- a/AnimalComics/AnimalComics.html
+++ b/AnimalComics/AnimalComics.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="AnimalComics1.jpg"> <br>
-30 issues 1942 - 2948 by Dell Comics
+<img src="AnimalComics1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -31,11 +30,21 @@
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+30 issues 1942 - 1948 by Dell Comics, many of the early issues illustrated by Walt Kelly, where he premiered Pogo. Issue #1 features Albert (first appearance, an alligator); Pogo (first appearance, a possum); Bumbazine (first appearance); Mrs. Jay (first appearance); Beetle (first appearance).  Bumbazine bakes Pogo a birthday cake, but Albert tries to steal it.
 </p>
+
 </body>
 </html>
