--- a/BasilWolvertionsGatewayToHorror/BasilWolvertionsGatewayToHorror.html
+++ b/BasilWolvertionsGatewayToHorror/BasilWolvertionsGatewayToHorror.html
@@ -8,10 +8,10 @@
 
 <body>
 <img src="BasilWolvertionsGatewayToHorror.jpg"> <br>
-1 issue in 1988 by Dark Horse<br>
-Created by Basil Wolverton
+1 issue in 1988 by Dark Horse, created by <a href="../BasilWolverton/BasilWolverton.html">Basil Wolverton</a>
 <p>
 Collecting four more of Wolverton's classic tales of horror and suspense, including: "Gateway to Horror" and "They Crawl by Night"! 
 </p>
+
 </body>
 </html>
