--- a/index.html
+++ b/index.html
@@ -42938,6 +42938,13 @@
 </tr>
 
 <tr>
+<td>Johnny Gruelle</td>
+<td>1880</td>
+<td>Creator</td>
+<td><a href="JohnnyGruelle/JohnnyGruelle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Johnny Hazard</td>
 <td>1944</td>
 <td>King Features</td>
@@ -51849,6 +51856,13 @@
 <td>1986</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Milt Gross</td>
+<td>1895</td>
+<td>Creator</td>
+<td><a href="MiltGross/MiltGross.html">Details</a></td>
 </tr>
 
 <tr>
