--- a/GeorgeCarlson/GeorgeCarlson.html
+++ b/GeorgeCarlson/GeorgeCarlson.html
@@ -26,6 +26,14 @@
 <div class="mySlides" style="text-align: center;"><img src="Carlson6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Carlson7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Carlson8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Carlson16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
