--- a/Spirit/Spirit.html
+++ b/Spirit/Spirit.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-<img src="Spirit01.jpg" title="Cover by Lou Fine"> <br>
-Creator: Will Eisner<br>
-Publisher: Eisner &amp; Iger<br>
-1940 Tribune Syndicate, 1941 Police Comics, 1944 Quality Comics, 1952 Fiction House, 1966 Harvey, 1974 Warren, 1977 Kitchen Sink, 2005 DC
+<img src="SpiritStrip01.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -21,7 +18,8 @@ Publisher: Eisner &amp; Iger<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Spirit01TribuneSyndicate.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpiritStrip01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpiritStrip02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../PoliceComics/PoliceComics011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spirit01.jpg" title="Cover by Lou Fine"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spirit02.jpg" title="Cover by Lou Fine"></div>
@@ -33,7 +31,6 @@ Publisher: Eisner &amp; Iger<br>
 <div class="mySlides" style="text-align: center;"><img src="Spirit08.jpg" title="Cover by Lou Fine"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spirit09.jpg" title="Cover by Lou Fine"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spirit10.jpg" title="Cover by Reed Crandall"></div>
-
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
