--- a/index.html
+++ b/index.html
@@ -69144,6 +69144,13 @@
 </tr>
 
 <tr>
+<td>Starlog</td>
+<td>1976</td>
+<td>Starlog Group</td>
+<td><a href="Starlog/Starlog.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stark Future</td>
 <td>1986</td>
 <td>Aircel</td>
