--- a/RickVeitch/RickVeitch.html
+++ b/RickVeitch/RickVeitch.html
@@ -28,6 +28,12 @@
 <div class="mySlides" style="text-align: center;"><img src="RickVeitch7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RickVeitch8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RickVeitch9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Image/image4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RickVeitch11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RickVeitch12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RickVeitch13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RickVeitch10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RickVeitch14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
